# procedurality

./: .gitignore  CMakeLists.txt
projects/msvc/: procedurality.sln  procedurality.vcxproj  procedurality.vcxproj.filters
src/: main.cpp
